<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/commonMarginSmall"
        tools:context=".Usuarios">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutUsers"
            android:layout_width="match_parent"
            android:layout_height="@dimen/responsive"
            style="@style/ReservesProdisConstraintBg"
            android:background="@drawable/rounded_corners_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/layoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/idTitle"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/emailTextView"
                    style="@style/ReservesProdisWhite"
                    android:textSize="@dimen/subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/adminTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/commonMarginSmall"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/AdminTitle"
                    style="@style/ReservesProdisWhite"
                    android:textSize="@dimen/subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/enabledTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/commonMarginSmall"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/enabledTitle"
                    style="@style/ReservesProdisWhite"
                    android:textSize="@dimen/subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <!-- Separador -->
            <View
                android:id="@+id/separador"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                style="@style/ReservesProdisWhiteSpacer"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsuarios"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbarSize="10dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separador" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Botón Cerrar Sessión -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>